--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,12 @@
 .topnav {
   background-color: #333;
   overflow: hidden;
+  margin:0 auto;
+  width:700px;
 }
 .topnav a {
   float: left;
   color: #f2f2f2;
-  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
