Add page 2 bg image

--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,14 @@
     background-image: url("../images/home.jpg");
     background-size: cover;
     padding-top: 70px;
-    height:320px;
+    height:325px;
     color: white;
     background-repeat: no-repeat;
   }
+#MenuID{
+   background-image: url("../images/background2.jpg");
+   background-size: cover;
+   padding-top: 50px;
+   height:800px;
+   background-repeat: no-repeat;
 }
