--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@
   background-color: #ddd;
   color: grey;
 }
-
 .topnav a.active {
   background-color: #04AA6D;
   color: white;
@@ -31,19 +30,24 @@
     background-image: url("../images/home.jpg");
     background-size: cover;
     padding-top: 70px;
-    height:325px;
+    height:1100px;
     color: white;
     background-repeat: no-repeat;
   }
 #MenuID{
    background-image: url("../images/background2.jpg");
-   background-size: cover;
-   padding-top: 50px;
+   background-size:cover;
+   padding-left: 15%;
    height:800px;
    background-repeat: no-repeat;
 }
 #menuimage{
-  height:90%;
-  width:60%;
-  padding-left:20%;
+  height:100%;
+  width:70%;
+  padding-left:15%;
 }
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  width: 70%;
+  margin: auto;
+  }
