--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
     background-image: url("../images/home.jpg");
     background-size: cover;
     padding-top: 70px;
-    height:1100px;
+    height:1050px;
     color: white;
     background-repeat: no-repeat;
   }
@@ -51,3 +51,16 @@
   width: 70%;
   margin: auto;
   }
+  .row {
+    display: flex;
+    }
+  .container {
+      width: 50%;
+      margin: auto;
+      padding-top: 20px;
+      padding-bottom: 20px;
+   }
+  .h1 {
+      text-align: center;
+      font-size:70px;
+   }
