--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,17 @@
   .row {
     display: flex;
     }
-  .container {
-      width: 50%;
-      margin: auto;
-      padding-top: 20px;
-      padding-bottom: 20px;
-   }
+
   .h1 {
       text-align: center;
       font-size:70px;
    }
+   .card {
+   padding-top: 50px;
+   padding-bottom: 50px;
+   padding-left: 50px;
+   padding-right: 50px;
+   box-shadow: 0 0px 20px 0 ;
+   background-color: rgba(200, 10, 15,0.8);
+   transition: 0.3s;
+ }
