--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,22 @@
   margin-right: auto;
   width: 25%;
 }
-.topnav {
-  background-color: grey;
-  overflow: hidden;
-  margin:0 auto;
-  width:1200px;
+
+
+.content {
+  padding: 16px;
 }
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
-.topnav a:hover {
-  background-color: #ddd;
-  color: grey;
+
+.sticky + .content {
+  padding-top: 60px;
 }
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-  background-color: #ff0000;
-}
+
 #HomeID {
     background-image: url("../images/home.jpg");
     background-size: cover;
@@ -110,8 +104,8 @@ body {
 
 #navbar {
   overflow: hidden;
-  background-color: #333;
-  
+  background-color: #000000;
+  background: rgba(0, 0, 0, 0.3);
 }
 
 #navbar a {
@@ -130,7 +124,7 @@ body {
 }
 
 #navbar a.active {
-  background-color: #04AA6D;
+  background-color: red;
   color: white;
 }
 
